--- a/collector-config.yaml
+++ b/collector-config.yaml
@@ -15,7 +15,9 @@ extensions:
 exporters:
   otlp:
     endpoint: "http://fleet-server:8200"
-    insecure: true
+
+    tls:
+      insecure: true
 
 service:
   extensions: [health_check]
